# azure-devtools

./: .gitignore  Cargo.toml  LICENSE  README.md  rusfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: lib.rs
src/azure_vars/state/: action.rs  mod.rs  state.rs  state_store.rs
src/azure_vars/tui/: draw.rs  handle_input.rs  mod.rs  widgets.rs
